# definitions-lib

./: .gitignore  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: checks.yaml  mypy.yaml  publish.yaml
definitions/: __init__.py  __main__.py  config.py
definitions/custom_scripts/: __init__.py  operations_encrypt.py  operations_tables.py  schemas.py  tables.py
definitions/templates/definitions/: README  alembic.ini.mako  env.py
test_migrations/: env.py
test_migrations/versions/: 6f9307c74452_tests.py
tests/: conftest.py  test_init.py  test_migrations.py
tests/structure/: __init__.py  base.py
tests/structure/STG/: achievement.py
